--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,33 +1,55 @@
 #articles {
-    display: inline-block;
-    overflow: auto;
-    width: 60%;
-  }
-  #notes {
-    float: right;
-    width: 30%;
-  }
-  textarea, input {
-    display: block;
-    width: 100%;
-    background-color: rgb(227, 228, 228);
-  }
-  input {
-    height: 36px;
-    font-size: 24px;
-  }
-  textarea {
-    height: 200px;
-    font-size: 18px;
-  }
+  display: inline-block;
+  overflow: auto;
+  width: 60%;
+}
 
-  .card {
-    width: 300px;
-  }
+textarea,
+input {
+  padding: 12px 20px;
+  width: 100%;
+  height: 200px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  background-color: rgb(227, 228, 228);
+}
 
-  /* #articles {
-    display: flex;
+input {
+  height: 36px;
+  font-size: 24px;
+}
+
+.card {
+  width: 300px;
+  height: 320px;
+  margin: auto;
+  margin-bottom: 10px;
+}
+
+.btn {
+  margin: 10px;
+}
+
+.jumbotron {
+  margin-bottom: 20px;
+  padding: 100px;
+  background-image: url(../img/losangeles.jpg);
+  background-size: cover;
+  color: white;
+  text-shadow: black 0.3em 0.3em 0.3em;
+}
+
+.navbar-brand {
+  font-size: 30px;
+}
+
+#articles {
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: auto;
-} */
+}
+
+#notes {
+  margin: 50px;
+}
